# aoc-monitor-client

./: Cargo.toml  build.rs  crt.vpk  res.vpk
res/: manifest.json  manifest.toml
res/assets/: basis.rhai  c64.toml  c64inv.json
res/assets/shaders/: scanline.fs
src/: main.rs
